⬆️  Update .tmux.config(color scheme)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,4 +2,15 @@
 set -g mouse on
 
 # Scroll History
-set -g history-limit 30000
+set -g history-limit 10000
+
+# set shell
+set -g default-shell /bin/zsh
+
+# Automatically set window title
+set-window-option -g automatic-rename on
+set-option -g set-titles on
+set-option -g default-terminal "screen-256color"
+
+# No delay for escape key press
+set -sg escape-time 0
