--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,10 @@ set -g default-shell /bin/zsh
 # Automatically set window title
 set-window-option -g automatic-rename on
 set-option -g set-titles on
+set-option -s -g escape-time 1
+set-option -g renumber-windows on
+
+# 256 colors support
 set-option -g default-terminal "screen-256color"
 
 # No delay for escape key press
