--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,14 +7,32 @@ set -g history-limit 10000
 # set shell
 set -g default-shell /bin/zsh
 
-# Automatically set window title
-set-window-option -g automatic-rename on
+# Don't rename windows automatically
+set-option -g allow-rename off
 set-option -g set-titles on
 set-option -s -g escape-time 1
 set-option -g renumber-windows on
 
-# 256 colors support
+# Open window with currrent path
+bind c new-window -c '#{pane_current_path}'
+
+# Open pane with current path
+bind '%' split-window -h -c '#{pane_current_path}'
+bind '"' split-window -v -c '#{pane_current_path}'
+
+# Use Alt-vim keys without prefix key to switch panes
+bind-key -n M-h select-pane -L
+bind-key -n M-j select-pane -D
+bind-key -n M-k select-pane -U
+bind-key -n M-l select-pane -R
+
+# 256 true colors support
 set-option -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # No delay for escape key press
 set -sg escape-time 0
+
+# Theme
+set -g status-bg black
+set -g status-fg white
