--- a/.gitconfig
+++ b/.gitconfig
@@ -1,11 +1,12 @@
 [user]
-	email = tammarut.nua@gmail.com
+	email = tammarut_nua@true-e-logistics.com
 	name = tammarut
 [alias]
 	logline = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 [credential]
 	helper = cache
 [core]
+  editor = nvim
 	pager = diff-so-fancy | less --tabs=4 -RFX
 [color]
 	ui = true
