🔼 Update .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@
 set -g mouse on
 
 # Scroll History
-set -g history-limit 10000
+set -g history-limit 3000
 
 # set shell
 set -g default-shell /bin/zsh
@@ -10,7 +10,6 @@ set -g default-shell /bin/zsh
 # Don't rename windows automatically
 set-option -g allow-rename off
 set-option -g set-titles on
-set-option -s -g escape-time 1
 set-option -g renumber-windows on
 
 # Open window with currrent path
@@ -32,6 +31,9 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 # No delay for escape key press
 set -sg escape-time 0
+
+# Reduce time to wait for Escape key. You'll want this for neovim.
+set-option escape-time 40
 
 # Theme
 set -g status-bg black
