🔼 Update .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,6 +25,9 @@ bind-key -n M-j select-pane -D
 bind-key -n M-k select-pane -U
 bind-key -n M-l select-pane -R
 
+# Auto source .tmux.conf
+bind r source-file ~/.tmux.conf
+
 # 256 true colors support
 set-option -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
@@ -37,4 +40,6 @@ set-option escape-time 40
 
 # Theme
 set -g status-bg black
-set -g status-fg white
+set -g status-fg green
+
+set-option -g focus-events on
