--- a/.tmux.conf
+++ b/.tmux.conf
@@ -43,3 +43,7 @@ set -g status-bg black
 set -g status-fg green
 
 set-option -g focus-events on
+
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
