--- a/.gitconfig
+++ b/.gitconfig
@@ -8,8 +8,9 @@
 [core]
   editor = nvim
 	pager = diff-so-fancy | less --tabs=4 -RFX
+	excludesfile = /Users/pleum/.gitignore_global
 [color]
-	ui = true
+	ui = auto
 [color "diff-highlight"]
 	oldNormal = red bold
 	oldHighlight = red bold 52
@@ -22,3 +23,13 @@
 	old = red bold
 	new = green bold
 	whitespace = red reverse
+[difftool "sourcetree"]
+	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+	path = 
+[mergetool "sourcetree"]
+	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
+[commit]
+	template = /Users/pleum/.stCommitMsg
+[help]
+	autocorrect = 15
