⚒ update tmux.conf and gitconfig

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,7 +14,6 @@ set-option -g renumber-windows on
 
 # Open window with currrent path
 bind c new-window -c '#{pane_current_path}'
-
 # Open pane with current path
 bind '%' split-window -h -c '#{pane_current_path}'
 bind '"' split-window -v -c '#{pane_current_path}'
@@ -44,6 +43,13 @@ set -g status-fg green
 
 set-option -g focus-events on
 
+# Set vi key bindings mode
 set-window-option -g mode-keys vi
+set -g status-keys vi
+
+# copy from tmux to clipboard
+bind-key -T copy-mode-vi y send-keys -X copy-pipe "xclip -r" \; display-message "Copied to selection"
+bind-key -T copy-mode-vi Y send-keys -X copy-pipe "xclip -r -selection clipboard" \; display-message "Copied to clipboard"
+bind-key C-p run-shell "xclip -o | tmux load-buffer - && tmux paste-buffer"
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
