--- a/.gitconfig
+++ b/.gitconfig
@@ -25,7 +25,7 @@
 	whitespace = red reverse
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path = 
+	path =
 [mergetool "sourcetree"]
 	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
 	trustExitCode = true
@@ -33,3 +33,5 @@
 	template = /Users/pleum/.stCommitMsg
 [help]
 	autocorrect = 15
+[merge]
+	conflictstyle = diff3
