🔧(gitconfig): update gitconfig and gitignore_global file

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,37 +1,60 @@
 [user]
-	email = tammarut_nua@true-e-logistics.com
-	name = tammarut
+  email = tammarut_nua@true-e-logistics.com
+  name = tammarut
+
+[github]
+  user = tammarut
+
 [alias]
-	logline = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+  logline = log --graph --name-status --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+
 [credential]
-	helper = cache
+  helper = cache
+
 [core]
-  editor = nvim
-	pager = diff-so-fancy | less --tabs=4 -RFX
-	excludesfile = /Users/pleum/.gitignore_global
+  editor = lvim
+  pager = diff-so-fancy | less --tabs=4 -RFX
+  excludesfile = /Users/pleum/.gitignore_global
+
 [color]
-	ui = auto
+  status = auto
+  diff = auto
+  branch = auto
+  interactive = auto
+  grep = auto
+  ui = auto
+
+[diff]
+  tool = nvimdiff
+
 [color "diff-highlight"]
-	oldNormal = red bold
-	oldHighlight = red bold 52
-	newNormal = green bold
-	newHighlight = green bold 52
+  oldNormal = red bold
+  oldHighlight = red bold 52
+  newNormal = green bold
+  newHighlight = green bold 52
+
 [color "diff"]
-	meta = 11
-	frag = magenta bold
-	commit = yellow bold
-	old = red bold
-	new = green bold
-	whitespace = red reverse
+  meta = 11
+  frag = magenta bold
+  commit = yellow bold
+  old = red bold
+  new = green bold
+  whitespace = red reverse
+
 [difftool "sourcetree"]
-	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path =
+  cmd = opendiff \"$LOCAL\" \"$REMOTE\"
+  path = 
+
 [mergetool "sourcetree"]
-	cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
-	trustExitCode = true
+  cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+  trustExitCode = true
+
 [commit]
-	template = /Users/pleum/.stCommitMsg
+  template = /Users/pleum/.stCommitMsg
+
 [help]
-	autocorrect = 15
+  autocorrect = 15
+
 [merge]
-	conflictstyle = diff3
+  conflictstyle = diff3
+
