🔧 Update(.gitconfig): hide filename on git logline

--- a/.gitconfig
+++ b/.gitconfig
@@ -6,7 +6,7 @@
   user = tammarut
 
 [alias]
-  logline = log --graph --name-status --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+  logline = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 
 [credential]
   helper = cache
@@ -57,4 +57,3 @@
 
 [merge]
   conflictstyle = diff3
-
