🔧chore(.gitconfig): git diff with diff-words and delete sourcetree configuration

--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,7 @@
 
 [alias]
   logline = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+  diff-words = diff --color-words='[^[:space:]]|([[:alnum:]]|UTF_8_GUARD)+'
 
 [credential]
   helper = cache
@@ -40,14 +41,6 @@
   old = red bold
   new = green bold
   whitespace = red reverse
-
-[difftool "sourcetree"]
-  cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-  path = 
-
-[mergetool "sourcetree"]
-  cmd = /Applications/Sourcetree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
-  trustExitCode = true
 
 [commit]
   template = /Users/pleum/.stCommitMsg
